# algorithm

./: 2DTransform.cpp  3DTransform.cpp  BstIterator.cpp  CMakeCache.txt  CMakeLists.txt  Foo.cpp  FoolInternalData.h  Header.h  Makefile  StrTest.cpp  Taekwondo.cpp  TriangleNum.cpp  abstractFactory.cpp  adaptor.cpp  airFare.cpp  alarmProcess.cpp  alarmThread.cpp  alpha.cpp  alphaBlend.cpp  animation.cpp  area.cpp  average.cpp  bezier.cpp  bitOperation.cpp  bomb.cpp  bombMarker.cpp  box.cpp  bridge.cpp  builder.cpp  busStop.cpp  cairo-generate.cpp  cairoDemo.cpp  cairo_pattern_transform.cpp  cairo_roundRectangle.cpp  callPlugin.cpp  card.cpp  cast.cpp  circulation.cpp  city.cpp  cmake_install.cmake  (+94 more)
res/note/: programmingModel.txt
res/shader/: temp.frag  temp.vert
res/test-case/: grid_sample_input.txt  sample_input_Taekwondo - 副本.txt  sample_input_Taekwondo.txt  sample_input_alarm.txt  sample_input_box.txt  sample_input_busStop.txt  sample_input_city.txt  sample_input_cows.txt  sample_input_crossRiver.txt  sample_input_cryptographics.txt  sample_input_hansel.txt  sample_input_home.txt  sample_input_honeyComb.txt  sample_input_intersection.txt  sample_input_juice.txt  sample_input_match.txt  sample_input_meeting.txt  sample_input_nightShift.txt  sample_input_ok.txt  sample_input_parenthese.txt  sample_input_parentheses.txt  sample_input_prim.txt  sample_input_square.txt  sample_input_strtest.txt  sample_input_tree.txt  sample_input_tri.txt
